<resources>
    <string name="app_name">Client scheduler</string>
    <string name="Successful_login">Welcome</string>
    <string name="Unsuccessful_login">Try again</string>
    <string name="User_name">jdoe</string>
    <string name="Password">welcome1</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_User_name">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="customer_take_photo">Take Photo</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="John_Doe">John_Doe</string>
    <string name="Billing_address">Billing_address</string>
    <string name="anywhere_USA">anywhere_USA</string>
    <string name="customer_name">customer_name</string>
    <string name="type_of_session">type_of_session</string>
    <string name="sign_here">sign_here</string>
    <string name="submit_payment">submit_payment</string>
    <string name="Payment_amount_$$">Payment_amount_$$</string>
    <string name="View_receipt">View_receipt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>